# ai-sre-demo

./: .gitignore  README.md  package.json
backend/: Dockerfile  docker-compose.yaml  env.example  pyproject.toml
backend/api/: server.py
backend/api/ai_sre/: agents.py  ai_sre_router.py  models.py  schemas.py  services.py
backend/api/auth/: auth_router.py  services.py
backend/api/chatbot/: agents.py  chatbot_router.py  models.py  schemas.py
backend/api/database/: db.py
backend/api/dependencies/: auth.py  db.py
backend/api/user/: models.py  schemas.py  services.py  user_router.py
backend/api/utils/: draw_RAG_graph.py  hash_file.py  id_generator.py  llm_google_utils.py  llm_gpt_utils.py  llm_prompts.py  vs_weaviate_utils.py
backend/api/utils/data_loader/: __init__.py  incident_doc_loader.py  pdf_loader.py
backend/data/: n9kun7afrr  sajb8as9pw
frontend/: package.json
frontend/src/: App.css  App.tsx
